[metadata]
name = knit_script
version = 0.1.16
author = Megan Hofmann
author_email = m.hofmann@northeastern.edu
url = https://github.com/mhofmann-Khoury/knit_script
description = Knit Script is a domain specific programming language for writing v-bed knitting machine instructions. The language is loosely based on conventions from Python 3 but includes support for controlling a knitting machine. The code is interpreted into knitout which can then be processed into instructions for different types of knitting machines.
long_description = file: README.md
long_description_content_type = text/markdown
description_file=README.md
license = MIT
license_files=LICENSE.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.11
    Natural Language :: English

[options]
install_requires =
    networkx==3.1
    parglare==0.16.1
    Naked==0.1.32
    setuptools==68.1.2
    matplotlib~=3.7.2
zip_safe = True

[options.entry_points]
console_scripts =
    knit-script = knit_script.interpret:main

[options.package_data]
knit_script = *.ks
knit_script.knit_script_interpreter = *.pg, *.pgt
knit_script.knitout_interpreter = *.pg, *.pgt
knit_script.knit_script_std_library = *.ks
knit_script.test = *.ks
knit_script.knitout_compilers = *.js
knit_script.windows_resources = *.bat
* = README.md, LICENSE.rst, knit_script.bat, requirements.txt, expected_installation_test_output.PNG, installation_test.ks, MANIFEST.in, pyproject.toml, setup.cfg

[options.packages.find]
exclude = tests*